# SPDX-FileCopyrightText: 2024 EfficiOS Inc.
#
# SPDX-License-Identifier: MIT

EXTRA_DIST = \
	bindings/python/bt2/conftest.py \
	bindings/python/bt2/test_clock_class.py \
	bindings/python/bt2/test_clock_offset.py \
	bindings/python/bt2/test_clock_snapshot.py \
	bindings/python/bt2/test_component.py \
	bindings/python/bt2/test_component_class.py \
	bindings/python/bt2/test_component_descriptor.py \
	bindings/python/bt2/test_connection.py \
	bindings/python/bt2/test_error.py \
	bindings/python/bt2/test_event.py \
	bindings/python/bt2/test_event_class.py \
	bindings/python/bt2/test_field.py \
	bindings/python/bt2/test_field_class.py \
	bindings/python/bt2/test_graph.py \
	bindings/python/bt2/test_integer_range_set.py \
	bindings/python/bt2/test_interrupter.py \
	bindings/python/bt2/test_message.py \
	bindings/python/bt2/test_message_iterator.py \
	bindings/python/bt2/test_mip.py \
	bindings/python/bt2/test_mip1.py \
	bindings/python/bt2/test_package.py \
	bindings/python/bt2/test_packet.py \
	bindings/python/bt2/test_plugin.py \
	bindings/python/bt2/test_port.py \
	bindings/python/bt2/test_query_executor.py \
	bindings/python/bt2/test_stream.py \
	bindings/python/bt2/test_stream_class.py \
	bindings/python/bt2/test_trace.py \
	bindings/python/bt2/test_trace_class.py \
	bindings/python/bt2/test_trace_collection_message_iterator.py \
	bindings/python/bt2/test_value.py \
	bindings/python/bt2/utils.py \
	cli/bt_plugin_list_plugins.py \
	cli/bt_plugin_params.py \
	cli/bt_plugin_query.py \
	cli/bt_plugin_test_cli_exit_status.py \
	cli/convert-auto-src-comp-discovery-grouping.expect \
	cli/test-output-ctf-metadata.expect \
	cli/test_auto_src_comp_discovery_grouping.py \
	cli/test_auto_src_comp_discovery_log_level.py \
	cli/test_auto_src_comp_discovery_params.py \
	cli/test_convert_args.py \
	cli/test_exit_status.py \
	cli/test_help.py \
	cli/test_intersection.py \
	cli/test_list_plugins.py \
	cli/test_output_ctf_metadata.py \
	cli/test_output_path_ctf_non_lttng_trace.py \
	cli/test_packet_seq_num.py \
	cli/test_params.py \
	cli/test_query.py \
	cli/test_trace_copy.py \
	cli/test_trace_read.py \
	cli/test_trimmer.py \
	common-data \
	conftest.py \
	ctf-writer/test_ctf_writer_trace.py \
	lib/conds/conftest.py \
	plugins/flt.lttng-utils.debug-info/bins/i386-linux-gnu/build-id/.build-id/cd/d98cdd87f7fe64c13b6daad553987eafd40cbb.debug \
	plugins/flt.lttng-utils.debug-info/bins/i386-linux-gnu/build-id/libhello-so \
	plugins/flt.lttng-utils.debug-info/bins/i386-linux-gnu/debug-link/libhello-so \
	plugins/flt.lttng-utils.debug-info/bins/i386-linux-gnu/debug-link/libhello-so.debug \
	plugins/flt.lttng-utils.debug-info/bins/i386-linux-gnu/dwarf-full/libhello-so \
	plugins/flt.lttng-utils.debug-info/bins/i386-linux-gnu/elf-only/libhello-so \
	plugins/flt.lttng-utils.debug-info/bins/libhello.c \
	plugins/flt.lttng-utils.debug-info/bins/libhello.h \
	plugins/flt.lttng-utils.debug-info/bins/main.c \
	plugins/flt.lttng-utils.debug-info/bins/Makefile \
	plugins/flt.lttng-utils.debug-info/bins/powerpc-linux-gnu/build-id/.build-id/cd/d98cdd87f7fe64c13b6daad553987eafd40cbb.debug \
	plugins/flt.lttng-utils.debug-info/bins/powerpc-linux-gnu/build-id/libhello-so \
	plugins/flt.lttng-utils.debug-info/bins/powerpc-linux-gnu/debug-link/libhello-so \
	plugins/flt.lttng-utils.debug-info/bins/powerpc-linux-gnu/debug-link/libhello-so.debug \
	plugins/flt.lttng-utils.debug-info/bins/powerpc-linux-gnu/dwarf-full/libhello-so \
	plugins/flt.lttng-utils.debug-info/bins/powerpc-linux-gnu/elf-only/libhello-so \
	plugins/flt.lttng-utils.debug-info/bins/powerpc64le-linux-gnu/build-id/.build-id/cd/d98cdd87f7fe64c13b6daad553987eafd40cbb.debug \
	plugins/flt.lttng-utils.debug-info/bins/powerpc64le-linux-gnu/build-id/libhello-so \
	plugins/flt.lttng-utils.debug-info/bins/powerpc64le-linux-gnu/debug-link/libhello-so \
	plugins/flt.lttng-utils.debug-info/bins/powerpc64le-linux-gnu/debug-link/libhello-so.debug \
	plugins/flt.lttng-utils.debug-info/bins/powerpc64le-linux-gnu/dwarf-full/libhello-so \
	plugins/flt.lttng-utils.debug-info/bins/powerpc64le-linux-gnu/elf-only/libhello-so \
	plugins/flt.lttng-utils.debug-info/bins/README.md \
	plugins/flt.lttng-utils.debug-info/bins/tp.c \
	plugins/flt.lttng-utils.debug-info/bins/tp.h \
	plugins/flt.lttng-utils.debug-info/bins/x86-64-linux-gnu/build-id/.build-id/cd/d98cdd87f7fe64c13b6daad553987eafd40cbb.debug \
	plugins/flt.lttng-utils.debug-info/bins/x86-64-linux-gnu/build-id/libhello-so \
	plugins/flt.lttng-utils.debug-info/bins/x86-64-linux-gnu/debug-link/libhello-so \
	plugins/flt.lttng-utils.debug-info/bins/x86-64-linux-gnu/debug-link/libhello-so.debug \
	plugins/flt.lttng-utils.debug-info/bins/x86-64-linux-gnu/dwarf-full/libhello-so \
	plugins/flt.lttng-utils.debug-info/bins/x86-64-linux-gnu/elf-only/libhello-so \
	plugins/flt.lttng-utils.debug-info/test_bin_info.py \
	plugins/flt.lttng-utils.debug-info/trace-debug-info-mip0.expect \
	plugins/flt.lttng-utils.debug-info/trace-debug-info-mip1.expect \
	plugins/flt.lttng-utils.debug-info/test_dwarf.py \
	plugins/flt.lttng-utils.debug-info/test_succeed_debug_info.py \
	plugins/flt.utils.muxer/basic-timestamp-ordering.expect \
	plugins/flt.utils.muxer/diff-event-class-id.expect \
	plugins/flt.utils.muxer/diff-event-class-name.expect \
	plugins/flt.utils.muxer/diff-inactivity-msg-cs.expect \
	plugins/flt.utils.muxer/diff-stream-class-id.expect \
	plugins/flt.utils.muxer/diff-stream-class-name.expect \
	plugins/flt.utils.muxer/diff-stream-class-no-name.expect \
	plugins/flt.utils.muxer/diff-stream-id.expect \
	plugins/flt.utils.muxer/diff-stream-name.expect \
	plugins/flt.utils.muxer/diff-stream-no-name.expect \
	plugins/flt.utils.muxer/diff-trace-name.expect \
	plugins/flt.utils.muxer/multi-iter-ordering.expect \
	plugins/flt.utils.muxer/test_clock_compat.py \
	plugins/flt.utils.muxer/test_succeed_muxer.py \
	plugins/flt.utils.trimmer/test_succeed_trimmer.py \
	plugins/sink.ctf.fs/succeed/test_succeed_sink_ctf.py \
	plugins/sink.ctf.fs/succeed/trace-double-ctf1.expect \
	plugins/sink.ctf.fs/succeed/trace-double-ctf2.expect \
	plugins/sink.ctf.fs/succeed/trace-float-ctf1.expect \
	plugins/sink.ctf.fs/succeed/trace-float-ctf2.expect \
	plugins/sink.ctf.fs/succeed/trace-meta-variant-no-underscore-ctf1.expect \
	plugins/sink.ctf.fs/succeed/trace-meta-variant-one-underscore-ctf1.expect \
	plugins/sink.ctf.fs/succeed/trace-meta-variant-reserved-keywords-ctf1.expect \
	plugins/sink.ctf.fs/succeed/trace-meta-variant-same-with-underscore-ctf1.expect \
	plugins/sink.ctf.fs/succeed/trace-meta-variant-two-underscores-ctf1.expect \
	plugins/sink.ctf.fs/test_assume_single_trace.py \
	plugins/sink.ctf.fs/test_stream_names.py \
	plugins/sink.text.details/default-compact-ctf1-mip0.expect \
	plugins/sink.text.details/default-compact-ctf1-mip1.expect \
	plugins/sink.text.details/default-compact-ctf2-mip1.expect \
	plugins/sink.text.details/default-compact-without-metadata.expect \
	plugins/sink.text.details/default-compact-without-time-ctf1-mip0.expect \
	plugins/sink.text.details/default-compact-without-time-ctf1-mip1.expect \
	plugins/sink.text.details/default-compact-without-time-ctf2-mip1.expect \
	plugins/sink.text.details/default-ctf1-mip0.expect \
	plugins/sink.text.details/default-ctf1-mip1.expect \
	plugins/sink.text.details/default-ctf2-mip1.expect \
	plugins/sink.text.details/default-without-data-ctf1-mip0.expect \
	plugins/sink.text.details/default-without-data-ctf1-mip1.expect \
	plugins/sink.text.details/default-without-data-ctf2-mip1.expect \
	plugins/sink.text.details/default-without-data-without-metadata.expect \
	plugins/sink.text.details/default-without-metadata-mip0.expect \
	plugins/sink.text.details/default-without-metadata-mip1.expect \
	plugins/sink.text.details/default-without-names-ctf1-mip0.expect \
	plugins/sink.text.details/default-without-names-ctf1-mip1.expect \
	plugins/sink.text.details/default-without-names-ctf2-mip1.expect \
	plugins/sink.text.details/default-without-time-ctf1-mip0.expect \
	plugins/sink.text.details/default-without-time-ctf1-mip1.expect \
	plugins/sink.text.details/default-without-time-ctf2-mip1.expect \
	plugins/sink.text.details/default-without-trace-name-ctf1-mip0.expect \
	plugins/sink.text.details/default-without-trace-name-ctf1-mip1.expect \
	plugins/sink.text.details/default-without-trace-name-ctf2-mip1.expect \
	plugins/sink.text.details/default-without-uuid-ctf1-mip0.expect \
	plugins/sink.text.details/default-without-uuid-ctf1-mip1.expect \
	plugins/sink.text.details/default-without-uuid-ctf2-mip1.expect \
	plugins/sink.text.details/no-packet-context.expect \
	plugins/sink.text.details/test_succeed_details.py \
	plugins/sink.text.pretty/fl-bm-ctf2.expect \
	plugins/sink.text.pretty/test_enum.py \
	plugins/sink.text.pretty/test_pretty.py \
	plugins/src.ctf.fs/empty-event-record.expect \
	plugins/src.ctf.fs/field/conftest.py \
	plugins/src.ctf.fs/field/ctf-1.8-pass-fixed-len-uint-32-be.mp \
	plugins/src.ctf.fs/field/ctf-1.8-pass-fixed-len-uint-32-le.mp \
	plugins/src.ctf.fs/field/ctf-1.8-pass-static-len-array-of-struct.mp \
	plugins/src.ctf.fs/field/ctf-1.8-pass-struct-empty.mp \
	plugins/src.ctf.fs/field/ctf-1.8-pass-struct.mp \
	plugins/src.ctf.fs/field/ctf-1.8-pass-variant.mp \
	plugins/src.ctf.fs/metadata-info-crlf-metadata.expect \
	plugins/src.ctf.fs/metadata-info-lf-metadata.expect \
	plugins/src.ctf.fs/metadata-info-succeed1.expect \
	plugins/src.ctf.fs/succeed/test_succeed_src_ctf.py \
	plugins/src.ctf.fs/succeed/trace-2packets-barectf-event-before-packet-ctf1-mip0.expect \
	plugins/src.ctf.fs/succeed/trace-2packets-barectf-event-before-packet-ctf1-mip1.expect \
	plugins/src.ctf.fs/succeed/trace-2packets-barectf-event-before-packet-ctf2-mip1.expect \
	plugins/src.ctf.fs/succeed/trace-2packets-ctf1-mip0.expect \
	plugins/src.ctf.fs/succeed/trace-2packets-ctf1-mip1.expect \
	plugins/src.ctf.fs/succeed/trace-2packets-ctf2-mip1.expect \
	plugins/src.ctf.fs/succeed/trace-array-align-elem.expect \
	plugins/src.ctf.fs/succeed/trace-barectf-event-before-packet-ctf1-mip0.expect \
	plugins/src.ctf.fs/succeed/trace-barectf-event-before-packet-ctf1-mip1.expect \
	plugins/src.ctf.fs/succeed/trace-barectf-event-before-packet-ctf2-mip1.expect \
	plugins/src.ctf.fs/succeed/trace-clock-offset-goes-back-in-time.expect \
	plugins/src.ctf.fs/succeed/trace-def-clk-freq-ctf1-mip0.expect \
	plugins/src.ctf.fs/succeed/trace-def-clk-freq-ctf1-mip1.expect \
	plugins/src.ctf.fs/succeed/trace-lttng-crash.expect \
	plugins/src.ctf.fs/succeed/trace-lttng-event-after-packet.expect \
	plugins/src.ctf.fs/succeed/trace-lttng-tracefile-rotation-ctf1-mip0.expect \
	plugins/src.ctf.fs/succeed/trace-lttng-tracefile-rotation-ctf1-mip1.expect \
	plugins/src.ctf.fs/succeed/trace-lttng-tracefile-rotation-ctf2-mip1.expect \
	plugins/src.ctf.fs/succeed/trace-meta-clk-cls-before-trace-cls.expect \
	plugins/src.ctf.fs/succeed/trace-meta-ctx-sequence.expect \
	plugins/src.ctf.fs/succeed/trace-session-rotation-ctf1-mip0.expect \
	plugins/src.ctf.fs/succeed/trace-session-rotation-ctf1-mip1.expect \
	plugins/src.ctf.fs/succeed/trace-session-rotation-ctf2-mip1.expect \
	plugins/src.ctf.fs/succeed/trace-simple.expect \
	plugins/src.ctf.fs/succeed/trace-smalltrace-mip0.expect \
	plugins/src.ctf.fs/succeed/trace-smalltrace-mip1.expect \
	plugins/src.ctf.fs/succeed/trace-struct-array-align-elem.expect \
	plugins/src.ctf.fs/test_deterministic_ordering.py \
	plugins/src.ctf.fs/test_fail_src_ctf.py \
	plugins/src.ctf.fs/test_query_metadata_info.py \
	plugins/src.ctf.fs/test_query_support_info.py \
	plugins/src.ctf.fs/test_query_trace_info.py \
	plugins/src.ctf.fs/valid-events-then-invalid-events.expect \
	plugins/src.ctf.lttng-live/base-2.15.json \
	plugins/src.ctf.lttng-live/base.json \
	plugins/src.ctf.lttng-live/cli-base-2.15.expect \
	plugins/src.ctf.lttng-live/cli-base.expect \
	plugins/src.ctf.lttng-live/cli-list-sessions-2.15.expect \
	plugins/src.ctf.lttng-live/cli-list-sessions.expect \
	plugins/src.ctf.lttng-live/cli-multi-domains-2.15.expect \
	plugins/src.ctf.lttng-live/cli-multi-domains.expect \
	plugins/src.ctf.lttng-live/conftest.py \
	plugins/src.ctf.lttng-live/inactivity-discarded-packet.expect \
	plugins/src.ctf.lttng-live/inactivity-discarded-packet.json \
	plugins/src.ctf.lttng-live/invalid-metadata.json \
	plugins/src.ctf.lttng-live/list-sessions-2.15.json \
	plugins/src.ctf.lttng-live/list-sessions.json \
	plugins/src.ctf.lttng-live/lttng_live_server.py \
	plugins/src.ctf.lttng-live/multi-domains-2.15.json \
	plugins/src.ctf.lttng-live/multi-domains-inverse-2.15.json \
	plugins/src.ctf.lttng-live/multi-domains-inverse.json \
	plugins/src.ctf.lttng-live/multi-domains.json \
	plugins/src.ctf.lttng-live/new-streams.expect \
	plugins/src.ctf.lttng-live/new-streams.json \
	plugins/src.ctf.lttng-live/rate-limited.json \
	plugins/src.ctf.lttng-live/split-metadata.expect \
	plugins/src.ctf.lttng-live/split-metadata.json \
	plugins/src.ctf.lttng-live/stored-values.expect \
	plugins/src.ctf.lttng-live/stored-values.json \
	plugins/src.ctf.lttng-live/test_live.py \
	plugins/src.ctf.lttng-live/test_query_live.py \
	python-plugin-provider/bt_plugin_test_python_plugin_provider.py \
	python-plugin-provider/test_python_plugin_provider.py \
	utils/python \
	REUSE.toml

AM_CPPFLAGS += -I$(top_srcdir)/tests/utils

if ENABLE_VENDOR_CATCH2
AM_CPPFLAGS += -I$(top_srcdir)/tests/utils/catch2
CATCH2_LDADD = utils/catch2/libcatch2.la
else
AM_CPPFLAGS += $(CATCH2_CFLAGS)
CATCH2_LDADD = $(CATCH2_LIBS)
endif

if ENABLE_VENDOR_FMT
FMT_LDADD = $(top_builddir)/src/cpp-common/vendor/fmt/libfmt.la
else
AM_CPPFLAGS += $(FMT_CFLAGS)
FMT_LDADD = $(FMT_LIBS)
endif

COMMON_TEST_LDADD = \
	$(CATCH2_LDADD) \
	$(top_builddir)/src/common/libcommon.la \
	$(top_builddir)/src/logging/liblogging.la

LIB_COMMON_TEST_LDADD = \
	utils/libtestcommon.la \
	lib/utils/liblib-utils.la \
	$(CATCH2_LDADD) \
	$(top_builddir)/src/common/libcommon.la \
	$(top_builddir)/src/logging/liblogging.la \
	$(FMT_LDADD)

# CTF trace generators common link flags
GEN_TRACE_LDADD = \
	$(top_builddir)/src/ctf-writer/libbabeltrace2-ctf-writer.la \
	$(top_builddir)/src/common/libcommon.la \
	$(top_builddir)/src/logging/liblogging.la

noinst_LTLIBRARIES =
noinst_PROGRAMS =

if ENABLE_VENDOR_CATCH2
noinst_LTLIBRARIES += utils/catch2/libcatch2.la
utils_catch2_libcatch2_la_SOURCES = \
	utils/catch2/catch2/benchmark/catch_benchmark.hpp \
	utils/catch2/catch2/benchmark/catch_benchmark_all.hpp \
	utils/catch2/catch2/benchmark/catch_chronometer.cpp \
	utils/catch2/catch2/benchmark/catch_chronometer.hpp \
	utils/catch2/catch2/benchmark/catch_clock.hpp \
	utils/catch2/catch2/benchmark/catch_constructor.hpp \
	utils/catch2/catch2/benchmark/catch_environment.hpp \
	utils/catch2/catch2/benchmark/catch_estimate.hpp \
	utils/catch2/catch2/benchmark/catch_execution_plan.hpp \
	utils/catch2/catch2/benchmark/catch_optimizer.hpp \
	utils/catch2/catch2/benchmark/catch_outlier_classification.hpp \
	utils/catch2/catch2/benchmark/catch_sample_analysis.hpp \
	utils/catch2/catch2/benchmark/detail/catch_analyse.cpp \
	utils/catch2/catch2/benchmark/detail/catch_analyse.hpp \
	utils/catch2/catch2/benchmark/detail/catch_benchmark_function.cpp \
	utils/catch2/catch2/benchmark/detail/catch_benchmark_function.hpp \
	utils/catch2/catch2/benchmark/detail/catch_benchmark_stats.hpp \
	utils/catch2/catch2/benchmark/detail/catch_benchmark_stats_fwd.hpp \
	utils/catch2/catch2/benchmark/detail/catch_complete_invoke.hpp \
	utils/catch2/catch2/benchmark/detail/catch_estimate_clock.hpp \
	utils/catch2/catch2/benchmark/detail/catch_measure.hpp \
	utils/catch2/catch2/benchmark/detail/catch_repeat.hpp \
	utils/catch2/catch2/benchmark/detail/catch_run_for_at_least.cpp \
	utils/catch2/catch2/benchmark/detail/catch_run_for_at_least.hpp \
	utils/catch2/catch2/benchmark/detail/catch_stats.cpp \
	utils/catch2/catch2/benchmark/detail/catch_stats.hpp \
	utils/catch2/catch2/benchmark/detail/catch_timing.hpp \
	utils/catch2/catch2/catch_all.hpp \
	utils/catch2/catch2/catch_approx.cpp \
	utils/catch2/catch2/catch_approx.hpp \
	utils/catch2/catch2/catch_assertion_info.hpp \
	utils/catch2/catch2/catch_assertion_result.cpp \
	utils/catch2/catch2/catch_assertion_result.hpp \
	utils/catch2/catch2/catch_case_sensitive.hpp \
	utils/catch2/catch2/catch_config.cpp \
	utils/catch2/catch2/catch_config.hpp \
	utils/catch2/catch2/catch_get_random_seed.cpp \
	utils/catch2/catch2/catch_get_random_seed.hpp \
	utils/catch2/catch2/catch_message.cpp \
	utils/catch2/catch2/catch_message.hpp \
	utils/catch2/catch2/catch_registry_hub.cpp \
	utils/catch2/catch2/catch_section_info.hpp \
	utils/catch2/catch2/catch_session.cpp \
	utils/catch2/catch2/catch_session.hpp \
	utils/catch2/catch2/catch_tag_alias.hpp \
	utils/catch2/catch2/catch_tag_alias_autoregistrar.cpp \
	utils/catch2/catch2/catch_tag_alias_autoregistrar.hpp \
	utils/catch2/catch2/catch_template_test_macros.hpp \
	utils/catch2/catch2/catch_test_case_info.cpp \
	utils/catch2/catch2/catch_test_case_info.hpp \
	utils/catch2/catch2/catch_test_macros.hpp \
	utils/catch2/catch2/catch_test_run_info.hpp \
	utils/catch2/catch2/catch_test_spec.cpp \
	utils/catch2/catch2/catch_test_spec.hpp \
	utils/catch2/catch2/catch_timer.cpp \
	utils/catch2/catch2/catch_timer.hpp \
	utils/catch2/catch2/catch_tostring.cpp \
	utils/catch2/catch2/catch_tostring.hpp \
	utils/catch2/catch2/catch_totals.cpp \
	utils/catch2/catch2/catch_totals.hpp \
	utils/catch2/catch2/catch_translate_exception.cpp \
	utils/catch2/catch2/catch_translate_exception.hpp \
	utils/catch2/catch2/catch_user_config.hpp \
	utils/catch2/catch2/catch_version.cpp \
	utils/catch2/catch2/catch_version.hpp \
	utils/catch2/catch2/catch_version_macros.hpp \
	utils/catch2/catch2/generators/catch_generator_exception.cpp \
	utils/catch2/catch2/generators/catch_generator_exception.hpp \
	utils/catch2/catch2/generators/catch_generators.cpp \
	utils/catch2/catch2/generators/catch_generators.hpp \
	utils/catch2/catch2/generators/catch_generators_adapters.hpp \
	utils/catch2/catch2/generators/catch_generators_all.hpp \
	utils/catch2/catch2/generators/catch_generators_random.cpp \
	utils/catch2/catch2/generators/catch_generators_random.hpp \
	utils/catch2/catch2/generators/catch_generators_range.hpp \
	utils/catch2/catch2/interfaces/catch_interfaces_all.hpp \
	utils/catch2/catch2/interfaces/catch_interfaces_capture.cpp \
	utils/catch2/catch2/interfaces/catch_interfaces_capture.hpp \
	utils/catch2/catch2/interfaces/catch_interfaces_config.cpp \
	utils/catch2/catch2/interfaces/catch_interfaces_config.hpp \
	utils/catch2/catch2/interfaces/catch_interfaces_enum_values_registry.hpp \
	utils/catch2/catch2/interfaces/catch_interfaces_exception.cpp \
	utils/catch2/catch2/interfaces/catch_interfaces_exception.hpp \
	utils/catch2/catch2/interfaces/catch_interfaces_generatortracker.cpp \
	utils/catch2/catch2/interfaces/catch_interfaces_generatortracker.hpp \
	utils/catch2/catch2/interfaces/catch_interfaces_registry_hub.cpp \
	utils/catch2/catch2/interfaces/catch_interfaces_registry_hub.hpp \
	utils/catch2/catch2/interfaces/catch_interfaces_reporter.cpp \
	utils/catch2/catch2/interfaces/catch_interfaces_reporter.hpp \
	utils/catch2/catch2/interfaces/catch_interfaces_reporter_factory.cpp \
	utils/catch2/catch2/interfaces/catch_interfaces_reporter_factory.hpp \
	utils/catch2/catch2/interfaces/catch_interfaces_tag_alias_registry.hpp \
	utils/catch2/catch2/interfaces/catch_interfaces_test_invoker.hpp \
	utils/catch2/catch2/interfaces/catch_interfaces_testcase.cpp \
	utils/catch2/catch2/interfaces/catch_interfaces_testcase.hpp \
	utils/catch2/catch2/internal/catch_assertion_handler.cpp \
	utils/catch2/catch2/internal/catch_assertion_handler.hpp \
	utils/catch2/catch2/internal/catch_case_insensitive_comparisons.cpp \
	utils/catch2/catch2/internal/catch_case_insensitive_comparisons.hpp \
	utils/catch2/catch2/internal/catch_clara.cpp \
	utils/catch2/catch2/internal/catch_clara.hpp \
	utils/catch2/catch2/internal/catch_commandline.cpp \
	utils/catch2/catch2/internal/catch_commandline.hpp \
	utils/catch2/catch2/internal/catch_compare_traits.hpp \
	utils/catch2/catch2/internal/catch_compiler_capabilities.hpp \
	utils/catch2/catch2/internal/catch_config_android_logwrite.hpp \
	utils/catch2/catch2/internal/catch_config_counter.hpp \
	utils/catch2/catch2/internal/catch_config_prefix_messages.hpp \
	utils/catch2/catch2/internal/catch_config_static_analysis_support.hpp \
	utils/catch2/catch2/internal/catch_config_uncaught_exceptions.hpp \
	utils/catch2/catch2/internal/catch_config_wchar.hpp \
	utils/catch2/catch2/internal/catch_console_colour.cpp \
	utils/catch2/catch2/internal/catch_console_colour.hpp \
	utils/catch2/catch2/internal/catch_console_width.hpp \
	utils/catch2/catch2/internal/catch_container_nonmembers.hpp \
	utils/catch2/catch2/internal/catch_context.cpp \
	utils/catch2/catch2/internal/catch_context.hpp \
	utils/catch2/catch2/internal/catch_debug_console.cpp \
	utils/catch2/catch2/internal/catch_debug_console.hpp \
	utils/catch2/catch2/internal/catch_debugger.cpp \
	utils/catch2/catch2/internal/catch_debugger.hpp \
	utils/catch2/catch2/internal/catch_decomposer.cpp \
	utils/catch2/catch2/internal/catch_decomposer.hpp \
	utils/catch2/catch2/internal/catch_deprecation_macro.hpp \
	utils/catch2/catch2/internal/catch_enforce.cpp \
	utils/catch2/catch2/internal/catch_enforce.hpp \
	utils/catch2/catch2/internal/catch_enum_values_registry.cpp \
	utils/catch2/catch2/internal/catch_enum_values_registry.hpp \
	utils/catch2/catch2/internal/catch_errno_guard.cpp \
	utils/catch2/catch2/internal/catch_errno_guard.hpp \
	utils/catch2/catch2/internal/catch_exception_translator_registry.cpp \
	utils/catch2/catch2/internal/catch_exception_translator_registry.hpp \
	utils/catch2/catch2/internal/catch_fatal_condition_handler.cpp \
	utils/catch2/catch2/internal/catch_fatal_condition_handler.hpp \
	utils/catch2/catch2/internal/catch_floating_point_helpers.cpp \
	utils/catch2/catch2/internal/catch_floating_point_helpers.hpp \
	utils/catch2/catch2/internal/catch_getenv.cpp \
	utils/catch2/catch2/internal/catch_getenv.hpp \
	utils/catch2/catch2/internal/catch_is_permutation.hpp \
	utils/catch2/catch2/internal/catch_istream.cpp \
	utils/catch2/catch2/internal/catch_istream.hpp \
	utils/catch2/catch2/internal/catch_jsonwriter.cpp \
	utils/catch2/catch2/internal/catch_jsonwriter.hpp \
	utils/catch2/catch2/internal/catch_lazy_expr.cpp \
	utils/catch2/catch2/internal/catch_lazy_expr.hpp \
	utils/catch2/catch2/internal/catch_leak_detector.cpp \
	utils/catch2/catch2/internal/catch_leak_detector.hpp \
	utils/catch2/catch2/internal/catch_lifetimebound.hpp \
	utils/catch2/catch2/internal/catch_list.cpp \
	utils/catch2/catch2/internal/catch_list.hpp \
	utils/catch2/catch2/internal/catch_logical_traits.hpp \
	utils/catch2/catch2/internal/catch_main.cpp \
	utils/catch2/catch2/internal/catch_message_info.cpp \
	utils/catch2/catch2/internal/catch_message_info.hpp \
	utils/catch2/catch2/internal/catch_meta.hpp \
	utils/catch2/catch2/internal/catch_move_and_forward.hpp \
	utils/catch2/catch2/internal/catch_noncopyable.hpp \
	utils/catch2/catch2/internal/catch_optional.hpp \
	utils/catch2/catch2/internal/catch_output_redirect.cpp \
	utils/catch2/catch2/internal/catch_output_redirect.hpp \
	utils/catch2/catch2/internal/catch_parse_numbers.cpp \
	utils/catch2/catch2/internal/catch_parse_numbers.hpp \
	utils/catch2/catch2/internal/catch_platform.hpp \
	utils/catch2/catch2/internal/catch_polyfills.cpp \
	utils/catch2/catch2/internal/catch_polyfills.hpp \
	utils/catch2/catch2/internal/catch_preprocessor.hpp \
	utils/catch2/catch2/internal/catch_preprocessor_internal_stringify.hpp \
	utils/catch2/catch2/internal/catch_preprocessor_remove_parens.hpp \
	utils/catch2/catch2/internal/catch_random_floating_point_helpers.hpp \
	utils/catch2/catch2/internal/catch_random_integer_helpers.hpp \
	utils/catch2/catch2/internal/catch_random_number_generator.cpp \
	utils/catch2/catch2/internal/catch_random_number_generator.hpp \
	utils/catch2/catch2/internal/catch_random_seed_generation.cpp \
	utils/catch2/catch2/internal/catch_random_seed_generation.hpp \
	utils/catch2/catch2/internal/catch_reporter_registry.cpp \
	utils/catch2/catch2/internal/catch_reporter_registry.hpp \
	utils/catch2/catch2/internal/catch_reporter_spec_parser.cpp \
	utils/catch2/catch2/internal/catch_reporter_spec_parser.hpp \
	utils/catch2/catch2/internal/catch_result_type.hpp \
	utils/catch2/catch2/internal/catch_reusable_string_stream.cpp \
	utils/catch2/catch2/internal/catch_reusable_string_stream.hpp \
	utils/catch2/catch2/internal/catch_run_context.cpp \
	utils/catch2/catch2/internal/catch_run_context.hpp \
	utils/catch2/catch2/internal/catch_section.cpp \
	utils/catch2/catch2/internal/catch_section.hpp \
	utils/catch2/catch2/internal/catch_sharding.hpp \
	utils/catch2/catch2/internal/catch_singletons.cpp \
	utils/catch2/catch2/internal/catch_singletons.hpp \
	utils/catch2/catch2/internal/catch_source_line_info.cpp \
	utils/catch2/catch2/internal/catch_source_line_info.hpp \
	utils/catch2/catch2/internal/catch_startup_exception_registry.cpp \
	utils/catch2/catch2/internal/catch_startup_exception_registry.hpp \
	utils/catch2/catch2/internal/catch_stdstreams.cpp \
	utils/catch2/catch2/internal/catch_stdstreams.hpp \
	utils/catch2/catch2/internal/catch_stream_end_stop.hpp \
	utils/catch2/catch2/internal/catch_string_manip.cpp \
	utils/catch2/catch2/internal/catch_string_manip.hpp \
	utils/catch2/catch2/internal/catch_stringref.cpp \
	utils/catch2/catch2/internal/catch_stringref.hpp \
	utils/catch2/catch2/internal/catch_tag_alias_registry.cpp \
	utils/catch2/catch2/internal/catch_tag_alias_registry.hpp \
	utils/catch2/catch2/internal/catch_template_test_registry.hpp \
	utils/catch2/catch2/internal/catch_test_case_info_hasher.cpp \
	utils/catch2/catch2/internal/catch_test_case_info_hasher.hpp \
	utils/catch2/catch2/internal/catch_test_case_registry_impl.cpp \
	utils/catch2/catch2/internal/catch_test_case_registry_impl.hpp \
	utils/catch2/catch2/internal/catch_test_case_tracker.cpp \
	utils/catch2/catch2/internal/catch_test_case_tracker.hpp \
	utils/catch2/catch2/internal/catch_test_failure_exception.cpp \
	utils/catch2/catch2/internal/catch_test_failure_exception.hpp \
	utils/catch2/catch2/internal/catch_test_macro_impl.hpp \
	utils/catch2/catch2/internal/catch_test_registry.cpp \
	utils/catch2/catch2/internal/catch_test_registry.hpp \
	utils/catch2/catch2/internal/catch_test_spec_parser.cpp \
	utils/catch2/catch2/internal/catch_test_spec_parser.hpp \
	utils/catch2/catch2/internal/catch_textflow.cpp \
	utils/catch2/catch2/internal/catch_textflow.hpp \
	utils/catch2/catch2/internal/catch_thread_local.hpp \
	utils/catch2/catch2/internal/catch_thread_support.hpp \
	utils/catch2/catch2/internal/catch_to_string.hpp \
	utils/catch2/catch2/internal/catch_uncaught_exceptions.cpp \
	utils/catch2/catch2/internal/catch_uncaught_exceptions.hpp \
	utils/catch2/catch2/internal/catch_uniform_floating_point_distribution.hpp \
	utils/catch2/catch2/internal/catch_uniform_integer_distribution.hpp \
	utils/catch2/catch2/internal/catch_unique_name.hpp \
	utils/catch2/catch2/internal/catch_unique_ptr.hpp \
	utils/catch2/catch2/internal/catch_unreachable.hpp \
	utils/catch2/catch2/internal/catch_void_type.hpp \
	utils/catch2/catch2/internal/catch_wildcard_pattern.cpp \
	utils/catch2/catch2/internal/catch_wildcard_pattern.hpp \
	utils/catch2/catch2/internal/catch_windows_h_proxy.hpp \
	utils/catch2/catch2/internal/catch_xmlwriter.cpp \
	utils/catch2/catch2/internal/catch_xmlwriter.hpp \
	utils/catch2/catch2/matchers/catch_matchers.cpp \
	utils/catch2/catch2/matchers/catch_matchers.hpp \
	utils/catch2/catch2/matchers/catch_matchers_all.hpp \
	utils/catch2/catch2/matchers/catch_matchers_container_properties.cpp \
	utils/catch2/catch2/matchers/catch_matchers_container_properties.hpp \
	utils/catch2/catch2/matchers/catch_matchers_contains.hpp \
	utils/catch2/catch2/matchers/catch_matchers_exception.cpp \
	utils/catch2/catch2/matchers/catch_matchers_exception.hpp \
	utils/catch2/catch2/matchers/catch_matchers_floating_point.cpp \
	utils/catch2/catch2/matchers/catch_matchers_floating_point.hpp \
	utils/catch2/catch2/matchers/catch_matchers_predicate.cpp \
	utils/catch2/catch2/matchers/catch_matchers_predicate.hpp \
	utils/catch2/catch2/matchers/catch_matchers_quantifiers.cpp \
	utils/catch2/catch2/matchers/catch_matchers_quantifiers.hpp \
	utils/catch2/catch2/matchers/catch_matchers_range_equals.hpp \
	utils/catch2/catch2/matchers/catch_matchers_string.cpp \
	utils/catch2/catch2/matchers/catch_matchers_string.hpp \
	utils/catch2/catch2/matchers/catch_matchers_templated.cpp \
	utils/catch2/catch2/matchers/catch_matchers_templated.hpp \
	utils/catch2/catch2/matchers/catch_matchers_vector.hpp \
	utils/catch2/catch2/matchers/internal/catch_matchers_impl.cpp \
	utils/catch2/catch2/matchers/internal/catch_matchers_impl.hpp \
	utils/catch2/catch2/reporters/catch_reporter_automake.cpp \
	utils/catch2/catch2/reporters/catch_reporter_automake.hpp \
	utils/catch2/catch2/reporters/catch_reporter_common_base.cpp \
	utils/catch2/catch2/reporters/catch_reporter_common_base.hpp \
	utils/catch2/catch2/reporters/catch_reporter_compact.cpp \
	utils/catch2/catch2/reporters/catch_reporter_compact.hpp \
	utils/catch2/catch2/reporters/catch_reporter_console.cpp \
	utils/catch2/catch2/reporters/catch_reporter_console.hpp \
	utils/catch2/catch2/reporters/catch_reporter_cumulative_base.cpp \
	utils/catch2/catch2/reporters/catch_reporter_cumulative_base.hpp \
	utils/catch2/catch2/reporters/catch_reporter_event_listener.cpp \
	utils/catch2/catch2/reporters/catch_reporter_event_listener.hpp \
	utils/catch2/catch2/reporters/catch_reporter_helpers.cpp \
	utils/catch2/catch2/reporters/catch_reporter_helpers.hpp \
	utils/catch2/catch2/reporters/catch_reporter_json.cpp \
	utils/catch2/catch2/reporters/catch_reporter_json.hpp \
	utils/catch2/catch2/reporters/catch_reporter_junit.cpp \
	utils/catch2/catch2/reporters/catch_reporter_junit.hpp \
	utils/catch2/catch2/reporters/catch_reporter_multi.cpp \
	utils/catch2/catch2/reporters/catch_reporter_multi.hpp \
	utils/catch2/catch2/reporters/catch_reporter_registrars.cpp \
	utils/catch2/catch2/reporters/catch_reporter_registrars.hpp \
	utils/catch2/catch2/reporters/catch_reporter_sonarqube.cpp \
	utils/catch2/catch2/reporters/catch_reporter_sonarqube.hpp \
	utils/catch2/catch2/reporters/catch_reporter_streaming_base.cpp \
	utils/catch2/catch2/reporters/catch_reporter_streaming_base.hpp \
	utils/catch2/catch2/reporters/catch_reporter_tap.cpp \
	utils/catch2/catch2/reporters/catch_reporter_tap.hpp \
	utils/catch2/catch2/reporters/catch_reporter_teamcity.cpp \
	utils/catch2/catch2/reporters/catch_reporter_teamcity.hpp \
	utils/catch2/catch2/reporters/catch_reporter_xml.cpp \
	utils/catch2/catch2/reporters/catch_reporter_xml.hpp \
	utils/catch2/catch2/reporters/catch_reporters_all.hpp
endif # ENABLE_VENDOR_CATCH2

noinst_LTLIBRARIES += utils/libtestcommon.la
utils_libtestcommon_la_SOURCES = \
	utils/common.c \
	utils/common.h \
	utils/common.hpp

noinst_PROGRAMS += cpp-common/test-c-string-view
cpp_common_test_c_string_view_SOURCES = cpp-common/test-c-string-view.cpp
cpp_common_test_c_string_view_LDADD = $(COMMON_TEST_LDADD)

noinst_PROGRAMS += cpp-common/test-uuid
cpp_common_test_uuid_SOURCES = cpp-common/test-uuid.cpp
cpp_common_test_uuid_LDADD = \
	$(COMMON_TEST_LDADD) \
	$(FMT_LDADD)

noinst_PROGRAMS += cpp-common/test-unicode-conv
cpp_common_test_unicode_conv_SOURCES = cpp-common/test-unicode-conv.cpp
cpp_common_test_unicode_conv_LDADD = \
	$(top_builddir)/src/cpp-common/libcpp-common.la \
	$(FMT_LDADD) \
	$(top_builddir)/src/lib/libbabeltrace2.la \
	$(COMMON_TEST_LDADD)

noinst_LTLIBRARIES += lib/utils/liblib-utils.la
lib_utils_liblib_utils_la_SOURCES = \
	lib/utils/run-in.cpp \
	lib/utils/run-in.hpp

noinst_PROGRAMS += lib/test-bt-values
lib_test_bt_values_SOURCES = lib/test-bt-values.cpp
lib_test_bt_values_LDADD = \
	$(LIB_COMMON_TEST_LDADD) \
	$(top_builddir)/src/lib/libbabeltrace2.la

noinst_PROGRAMS += lib/test-trace-ir-ref
lib_test_trace_ir_ref_SOURCES = lib/test-trace-ir-ref.cpp
lib_test_trace_ir_ref_LDADD = \
	$(LIB_COMMON_TEST_LDADD) \
	$(top_builddir)/src/lib/libbabeltrace2.la \
	$(top_builddir)/src/ctf-writer/libbabeltrace2-ctf-writer.la

noinst_PROGRAMS += lib/test-graph-topo
lib_test_graph_topo_SOURCES = lib/test-graph-topo.cpp
lib_test_graph_topo_LDADD = \
	$(LIB_COMMON_TEST_LDADD) \
	$(top_builddir)/src/lib/libbabeltrace2.la

noinst_PROGRAMS += lib/test-simple-sink
lib_test_simple_sink_SOURCES = lib/test-simple-sink.cpp
lib_test_simple_sink_LDADD = \
	$(LIB_COMMON_TEST_LDADD) \
	$(top_builddir)/src/lib/libbabeltrace2.la

noinst_PROGRAMS += lib/test-remove-destruction-listener-in-destruction-listener
lib_test_remove_destruction_listener_in_destruction_listener_SOURCES = lib/test-remove-destruction-listener-in-destruction-listener.cpp
lib_test_remove_destruction_listener_in_destruction_listener_LDADD = \
	$(LIB_COMMON_TEST_LDADD) \
	$(top_builddir)/src/lib/libbabeltrace2.la

noinst_PROGRAMS += lib/test-mip
lib_test_mip_SOURCES = lib/test-mip.cpp
lib_test_mip_LDADD = \
	$(LIB_COMMON_TEST_LDADD) \
	$(top_builddir)/src/lib/libbabeltrace2.la

noinst_PROGRAMS += lib/test-fields
lib_test_fields_SOURCES = lib/test-fields.cpp
lib_test_fields_LDADD = \
	$(LIB_COMMON_TEST_LDADD) \
	$(top_builddir)/src/lib/libbabeltrace2.la

noinst_PROGRAMS += lib/test-plugins
lib_test_plugins_SOURCES = lib/test-plugins.cpp
lib_test_plugins_LDADD = \
	$(LIB_COMMON_TEST_LDADD) \
	$(top_builddir)/src/lib/libbabeltrace2.la
lib_test_plugins_CPPFLAGS = \
	$(AM_CPPFLAGS) \
	-DPLUGINS_DIR=\"$(abs_builddir)/lib/plugins/.libs\"

noinst_LTLIBRARIES += lib/plugins/bt-plugin-minimal.la
lib_plugins_bt_plugin_minimal_la_SOURCES = lib/plugins/minimal.c
lib_plugins_bt_plugin_minimal_la_LDFLAGS = \
	$(AM_LDFLAGS) \
	$(LT_NO_UNDEFINED) \
	-rpath / -avoid-version -module $(LD_NOTEXT)
lib_plugins_bt_plugin_minimal_la_LIBADD = \
	$(top_builddir)/src/lib/libbabeltrace2.la \
	$(top_builddir)/src/common/libcommon.la \
	$(top_builddir)/src/logging/liblogging.la

noinst_LTLIBRARIES += lib/plugins/bt-plugin-sfs.la
lib_plugins_bt_plugin_sfs_la_SOURCES = lib/plugins/sfs.c
lib_plugins_bt_plugin_sfs_la_LDFLAGS = \
	$(AM_LDFLAGS) \
	$(LT_NO_UNDEFINED) \
	-rpath / -avoid-version -module $(LD_NOTEXT)
lib_plugins_bt_plugin_sfs_la_LIBADD = \
	$(top_builddir)/src/lib/libbabeltrace2.la \
	$(top_builddir)/src/common/libcommon.la \
	$(top_builddir)/src/logging/liblogging.la

noinst_PROGRAMS += lib/test-plugin-init-fail
lib_test_plugin_init_fail_SOURCES = lib/test-plugin-init-fail.cpp
lib_test_plugin_init_fail_LDADD = \
	$(LIB_COMMON_TEST_LDADD) \
	$(top_builddir)/src/lib/libbabeltrace2.la
lib_test_plugin_init_fail_CPPFLAGS = \
	$(AM_CPPFLAGS) \
	-DPLUGIN_DIR=\"$(abs_builddir)/lib/init-fail-plugin/.libs\"

noinst_LTLIBRARIES += lib/init-fail-plugin/bt-plugin.la
lib_init_fail_plugin_bt_plugin_la_SOURCES = lib/init-fail-plugin/plugin.cpp
lib_init_fail_plugin_bt_plugin_la_LDFLAGS = \
	$(AM_LDFLAGS) \
	$(LT_NO_UNDEFINED) \
	-rpath / -avoid-version -module $(LD_NOTEXT)
lib_init_fail_plugin_bt_plugin_la_LIBADD = \
	$(top_builddir)/src/lib/libbabeltrace2.la

if DEV_MODE

noinst_PROGRAMS += lib/conds/conds-triggers.bin
lib_conds_conds_triggers_bin_SOURCES = \
	lib/conds/conds-triggers.cpp \
	lib/conds/utils.cpp \
	lib/conds/utils.hpp \
	lib/conds/clk-cls-compat-postconds-triggers.cpp \
	lib/conds/clk-cls-compat-postconds-triggers.hpp \
	lib/conds/fc-tc-match-preconds-triggers.cpp \
	lib/conds/fc-tc-match-preconds-triggers.hpp
lib_conds_conds_triggers_bin_LDADD = \
	$(LIB_COMMON_TEST_LDADD) \
	$(top_builddir)/src/lib/libbabeltrace2.la

endif # DEV_MODE

noinst_PROGRAMS += bitfield/test-bitfield
bitfield_test_bitfield_SOURCES = bitfield/test-bitfield.cpp
bitfield_test_bitfield_LDADD = $(COMMON_TEST_LDADD)

noinst_PROGRAMS += ctf-writer/test-ctf-writer
ctf_writer_test_ctf_writer_SOURCES = ctf-writer/test-ctf-writer.cpp
ctf_writer_test_ctf_writer_LDADD = \
	utils/libtestcommon.la \
	$(CATCH2_LDADD) \
	$(top_builddir)/src/ctf-writer/libbabeltrace2-ctf-writer.la \
	$(top_builddir)/src/common/libcommon.la \
	$(top_builddir)/src/logging/liblogging.la

noinst_PROGRAMS += param-validation/test-param-validation
param_validation_test_param_validation_SOURCES = param-validation/test-param-validation.cpp
param_validation_test_param_validation_LDADD = \
	$(CATCH2_LDADD) \
	$(top_builddir)/src/param-parse/libparam-parse.la \
	$(top_builddir)/src/plugins/common/param-validation/libparam-validation.la \
	$(top_builddir)/src/lib/libbabeltrace2.la \
	$(top_builddir)/src/common/libcommon.la \
	$(top_builddir)/src/logging/liblogging.la \
	$(FMT_LDADD)

noinst_PROGRAMS += plugins/src.ctf.fs/succeed/gen-trace-simple.bin
plugins_src_ctf_fs_succeed_gen_trace_simple_bin_SOURCES = plugins/src.ctf.fs/succeed/gen-trace-simple.c
plugins_src_ctf_fs_succeed_gen_trace_simple_bin_LDADD = $(GEN_TRACE_LDADD)

noinst_PROGRAMS += plugins/sink.ctf.fs/succeed/gen-trace-float.bin
plugins_sink_ctf_fs_succeed_gen_trace_float_bin_SOURCES = plugins/sink.ctf.fs/succeed/gen-trace-float.c
plugins_sink_ctf_fs_succeed_gen_trace_float_bin_LDADD = $(GEN_TRACE_LDADD)

noinst_PROGRAMS += plugins/sink.ctf.fs/succeed/gen-trace-double.bin
plugins_sink_ctf_fs_succeed_gen_trace_double_bin_SOURCES = plugins/sink.ctf.fs/succeed/gen-trace-double.c
plugins_sink_ctf_fs_succeed_gen_trace_double_bin_LDADD = $(GEN_TRACE_LDADD)

if ENABLE_DEBUG_INFO

noinst_PROGRAMS += plugins/flt.lttng-utils.debug-info/dwarf-test.bin
plugins_flt_lttng_utils_debug_info_dwarf_test_bin_SOURCES = plugins/flt.lttng-utils.debug-info/dwarf-test.cpp
plugins_flt_lttng_utils_debug_info_dwarf_test_bin_CPPFLAGS = \
	$(AM_CPPFLAGS) \
	-I$(top_srcdir)/src/plugins
plugins_flt_lttng_utils_debug_info_dwarf_test_bin_LDADD = \
	$(CATCH2_LDADD) \
	$(top_builddir)/src/plugins/lttng-utils/debug-info/libdebug-info.la \
	$(top_builddir)/src/fd-cache/libfd-cache.la \
	$(top_builddir)/src/logging/liblogging.la \
	$(top_builddir)/src/common/libcommon.la \
	$(ELFUTILS_LIBS)

noinst_PROGRAMS += plugins/flt.lttng-utils.debug-info/bin-info-test.bin
plugins_flt_lttng_utils_debug_info_bin_info_test_bin_SOURCES = plugins/flt.lttng-utils.debug-info/bin-info-test.cpp
plugins_flt_lttng_utils_debug_info_bin_info_test_bin_CPPFLAGS = \
	$(AM_CPPFLAGS) \
	-I$(top_srcdir)/src/plugins
plugins_flt_lttng_utils_debug_info_bin_info_test_bin_LDADD = \
	$(CATCH2_LDADD) \
	$(top_builddir)/src/plugins/lttng-utils/debug-info/libdebug-info.la \
	$(top_builddir)/src/fd-cache/libfd-cache.la \
	$(top_builddir)/src/logging/liblogging.la \
	$(top_builddir)/src/common/libcommon.la \
	$(top_builddir)/src/lib/libbabeltrace2.la \
	$(ELFUTILS_LIBS)

endif # ENABLE_DEBUG_INFO

check-local:
	source $(builddir)/utils/env.sh && \
	bt-pytest $${BT_TESTS_PYTEST_EXTRA_ARGS:-} \
		-vv -rA --capture=tee-sys --log-cli-level=INFO "$(srcdir)"
